# geant4

./: .gitignore  GEANT4_install_instructions.txt
EEShashlikSimulation/BTF/: CMakeLists.txt  GNUmakefile  cmake_command.sh  instructions.txt  runEEShashlik.cc
EEShashlikSimulation/BTF/cmake/: run.mac
EEShashlikSimulation/BTF/include/: EEShashActionInitialization.hh  EEShashCalorimeterSD.hh  EEShashDetectorConstruction.hh  EEShashEventAction.hh  EEShashPrimaryGeneratorAction.hh  EEShashRunAction.hh
EEShashlikSimulation/BTF/src/: EEShashCalorimeterSD.cc  EEShashDetectorConstruction.cc  EEShashEventAction.cc  EEShashPrimaryGeneratorAction.cc  EEShashRunAction.cc
EEShashlikSimulation/H4/: Makefile  instructions.txt
EEShashlikSimulation/H4/include/: EEShashAnalysis.hh  EEShashEventAction.hh
EEShashlikSimulation/H4/src/: EEShashDetectorConstruction.cc  EEShashDetectorConstruction.cc~  EEShashEventAction.cc  EEShashEventAction.cc~  EEShashPrimaryGeneratorAction.cc  EEShashPrimaryGeneratorAction.cc~  EEShashRunAction.cc  EEShashRunAction.cc~
EEShashlikSimulation/H4/test/: CMakeCache.txt  cmake_install.cmake  runEEShashlik
EEShashlikSimulation/H4Ideal/include/: EEShashDetectorConstruction.hh  EEShashEventAction.hh  common.h
EEShashlikSimulation/H4Ideal/src/: EEShashCalorHit.cc  EEShashDetectorConstruction.cc  EEShashEventAction.cc  EEShashPrimaryGeneratorAction.cc  EEShashRunAction.cc
EEShashlikSimulation/H4OpticalSmall/: Makefile  cmake_install.cmake  run.mac  runEEShashlik.cc
EEShashlikSimulation/H4OpticalSmall/include/: EEShashCalorimeterSD.hh  EEShashDetectorConstruction.hh  EEShashEventAction.hh  EEShashPrimaryGeneratorAction.hh  G4EmUserPhysics.hh  MyMaterials.hh  SteppingAction.hh  TrackInformation.hh  TrackingAction.hh  common.h
EEShashlikSimulation/H4OpticalSmall/src/: EEShashActionInitialization.cc  EEShashCalorimeterSD.cc  EEShashDetectorConstruction.cc  EEShashEventAction.cc  EEShashPrimaryGeneratorAction.cc  EEShashRunAction.cc  G4EmUserPhysics.cc  MyMaterials.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
EEShashlikSimulation/IdealShashlik/: #Makefile#  Makefile~  cmake_command.sh  runEEShashlik.cc
EEShashlikSimulation/IdealShashlik/cmake/: #Makefile#  CMakeCache.txt  G4History.macro  Makefile  Makefile~  cmake_install.cmake  energyscript.sh  energyscript.sh~  run.mac  run.mac~  runEEShashlik
ForwardCaloUpgrade/Containment/: instructions.txt  printScan.py  run.mac  run20GeV.mac  runEEShashlik.cc
ForwardCaloUpgrade/GEANT/: GNUmakefile  currentEvent.rndm  currentRun.rndm  fcalor.cc  generic_input.in  newconfig.csh  newconfig.sh  pb_lyso.in  runFrascatiConfig.sh  sendAllOnBatch.sh  sendAllOnBatch_brass.sh  sendAllOnBatch_brass_vsTrasv.sh  sendAllOnBatch_studyCosts.py  sendAllOnBatch_tung.sh  sendAllOnBatch_tung_vsTrasv.sh  sendAllOnBatch_vsImpactPosition.sh  sendAllOnBatch_vsImpactPosition_tung.sh  sendAllOnBatch_vsTrasv.sh  sendOnBatch.py  sendOnBatch2.py  sendOnBatch_brass.py  sendOnBatch_tung.py
(+73 files in other folders)
